<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="pe.edu.tecsup.mythemes.ui.home.ThemeFragment"
        android:label="@string/title_theme"
        tools:layout="@layout/fragment_theme_linear" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="pe.edu.tecsup.mythemes.ui.dashboard.LinearFragment"
        android:label="@string/title_linear"
        tools:layout="@layout/fragment_theme" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="pe.edu.tecsup.mythemes.ui.notifications.GridFragment"
        android:label="@string/title_grid"
        tools:layout="@layout/fragment_layout_grid" />
</navigation>